# IFYProj

./: README.md  initviz.sh  pyproject.toml  scraper.py  settings.json  viz.py
classifier_model/: BUILDING.md  README.md  modlib.py  requirements.txt
scrapers/: reddit.py  twitter.py
web/static/: styles.css
web/templates/: index.html
