[tool.poetry]
name = "ify-project"
version = "0.1.0"
description = ""
authors = ["Hemanth Nandipati <maaki@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentiment-nltk = "^0.0.2"
joblib = "^1.3.2"
scikit-learn = "^1.3.1"
praw = "^7.7.1"
tweepy = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
